external-crates/move/crates/move-compiler/tests/move_check/parser/use_module_member_invalid_missing_semicolon.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/use_module_member_invalid_missing_semicolon.move:6:5
  │
6 │     fun foo() {}
  │     ^^^
  │     │
  │     Unexpected 'fun'
  │     Expected ';'

